--- a/.env.example
+++ b/.env.example
@@ -10,9 +10,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=digisolution
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=digisolut_main
+DB_USERNAME=digisolut_main
+DB_PASSWORD=6S543Pnk
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
